--- a/Project-12.qmd
+++ b/Project-12.qmd
@@ -18,6 +18,7 @@ library(stringr)
 library(scatterplot3d)
 ```
 
+
 ## Data loading 
 ```{r, warning=FALSE, message=FALSE}
 educ_expenditure <- vroom(here("data", "Expenditure on education.csv"), 
@@ -107,6 +108,7 @@ The columns' names of the Illiteracy dataset are :`r illiteracy |> names()`.
 
 The columns' names of the Rural population share dataset are :`r rural |> names()`.
 
+
 That is why we can apply the same function to each to the UNESCO datasets. Here we choose to eliminate Flags, Flag Codes and the indicator codes because they do not fall in our research scope. On top of that, we can see that there are two variables, Times and TIMES, that are duplicate of each other as seen in the following. So we will also removes the TIMES column.
 
 ```{r}
@@ -114,7 +116,6 @@ sum(educ_expenditure$Time == educ_expenditure$TIME) == nrow(educ_expenditure)
 ```
 
 Here, we see that this column contains the same value each time. So, we will also remove this column.
-
 ```{r}
 educ_expenditure |>
   distinct(NATMON_IND) |> 
@@ -122,12 +123,12 @@ educ_expenditure |>
 ```
 
 We will now apply the following function to all of the UNESCO data.
-
 ```{r}
 datacleaning_unesco <- function(data){
     data |> select(-`Flag Codes`, - Flags, - TIME, -ends_with("IND"))
 }
 ```
+
 ```{r}
 educ_expenditure <- datacleaning_unesco(educ_expenditure)
 GDP_capita <- datacleaning_unesco(GDP_capita)
@@ -137,9 +138,11 @@ enrolment  <- datacleaning_unesco(enrolment)
 illiteracy <-datacleaning_unesco(illiteracy)
 rural <- datacleaning_unesco(rural)
 ```
+```{r}
+young_pop <- young_pop |> mutate("Value"= Value * 10^3, "Indicator"= "Population aged 15-24 years (number)")
+```
 
 We now are doing the data cleaning of the electricity variable. 
-
 ```{r}
 electricity |> 
   names()|>
@@ -147,7 +150,6 @@ electricity |>
 ```
 
 Here, we want to see what values these columns take. 
-
 ```{r}
 electricity |> 
   distinct(`Series Code`, `Series Name`) |> 
@@ -155,7 +157,6 @@ electricity |>
 ```
 
 Because access to electricity is our variable of interest, we filter the dataset.
-
 ```{r}
 electricity <- electricity |>
   filter(`Series Name`== "Access to electricity (% of population)")|> 
@@ -163,14 +164,12 @@ electricity <- electricity |>
 ```
 
 We now are going to rename the columns for them to match the other variables from the UNESCO.
-
 ```{r}
 electricity <- electricity |> 
   rename("Country" = "Country Name", "LOCATION"= "Country Code", "Indicator"="Series Name")
 ```
 
 We do pivot_longer in order to have all of our datasets in the same format.
-
 ```{r}
 electricity <- electricity |> 
   pivot_longer(!(Indicator| Country| LOCATION)) |> 
@@ -179,7 +178,6 @@ electricity <- electricity |>
 ```
 
 We now are cleaning the PressFreedom variable.
-
 ```{r}
 PressFreedom |> 
   names() |>
@@ -373,13 +371,171 @@ illiteracy |> filter(Country=="World") |> ggplot(aes(x= Time, y=Value/10^3)) + g
 ```{r}
 illiteracy |> filter(Country %in%  c("Sub-Saharan Africa", "Central and Eastern Europe", "South-Eastern Asia", "Central Asia", "Northern Africa and Western Asia", "Eastern and South-Eastern Asia", "Oceania (excluding Australia and New Zealand")) |> ggplot(aes(x= Time, y=Value/10^3)) + geom_col() + ylab("Number of illiterate people per region") + ggtitle("Evolution of Illiteracy (in thousands) over time per region") + facet_wrap(~Country)
 ```
+### Creation of Regions
+```{r}
+CentralAsia <- c("Armenia", "Azerbaijan", "Georgia", "Kazakhstan", "Kyrgyzstan", "Mongolia", "Tajikistan", "Turkmenistan", "Uzbekistan")
+
+
+
+NortAfricaAndWestAsia <- c("Algeria", "Egypt", "Libya", "Morocco", "Sudan",  "Tunisia", "Western Sahara", "Azerbaijan", "Armenia",  "Bahrain", "Cyprus", "Georgia", "Iraq", "Israel", "Jordan", "Kuwait", "Lebanon", "Oman", "Palestine",  "Qatar", "Saudi Arabia", "Syrian Arab Republic", "Turkey", "United Arab Emirates", "Yemen")
+
+
+
+SubSahara <- c("Angola", "Benin", "Botswana", "Burkina Faso", "Burundi", "Cabo Verde", "Cameroon", "Central African Republic", "Chad", "Comoros", "Congo, Democratic Republic of", "Congo, Republic of", "Cote d'Ivoire", "Equatorial Guinea", "Eritrea", "Eswatini", "Ethiopia", "Gabon", "Gambia, The", "Ghana", "Guinea", "Guinea-Bissau", "Kenya", "Lesotho", "Liberia", "Madagascar", "Malawi", "Mali", "Mauritania", "Mauritius", "Mozambique", "Namibia", "Niger", "Nigeria", "Rwanda", "Sao Tome and Principe", "Senegal", "Seychelles", "Sierra Leone", "Somalia", "South Africa", "South Sudan", "Sudan", "Tanzania", "Togo", "Uganda", "Zambia", "Zimbabwe")
+
+
+CentralAndEasternEurope <- c("Albania", "Belarus", "Bosnia and Herzegovina", "Bulgaria", "Croatia", "Czech Republic", "Estonia", "Hungary", "Kosovo", "Latvia", "Lithuania", "Moldova", "Montenegro", "North Macedonia", "Poland", "Romania", "Serbia", "Slovakia", "Slovenia", "Ukraine")
+
+
+EastAndSoutheastAsia <- c("Brunei", "Cambodia", "China", "Indonesia", "Japan", "Laos", "Malaysia", "Myanmar", "Philippines", "Singapore", "South Korea", "Thailand", "Timor-Leste", "Vietnam")
+
+
+SoutheastAsia <- c("Brunei", "Cambodia", "Indonesia", "Laos", "Malaysia", "Myanmar", "Philippines", "Singapore", "Thailand", "Timor-Leste", "Vietnam")
+```
+
+
+### Young Pop regions
+```{r}
+young_pop_CentralAsia <-
+  young_pop |>
+  filter(Country %in% CentralAsia) |>
+  group_by(Time) |>
+  summarise(total_value = sum(Value, na.rm = TRUE))
+young_pop_CentralAsia <- young_pop_CentralAsia |> mutate("Region"= "Central Asia")
+```
+
+```{r}
+young_pop_NorthAfricaAndWestAsia <-
+  young_pop |>
+  filter(Country %in% NortAfricaAndWestAsia) |>
+  group_by(Time) |>
+  summarise(total_value = sum(Value, na.rm = TRUE))
+young_pop_NorthAfricaAndWestAsia <-young_pop_NorthAfricaAndWestAsia |> mutate("Region"= "North Africa And West Asia")
+```
+
+```{r}
+young_pop_SubSahara <-
+  young_pop |>
+  filter(Country %in% SubSahara) |>
+  group_by(Time) |>
+  summarise(total_value = sum(Value, na.rm = TRUE))
+young_pop_SubSahara <- young_pop_SubSahara |> mutate("Region"="SubSahara")
+```
+
+```{r}
+young_pop_CentralAndEasternEurope <-
+  young_pop |>
+  filter(Country %in% CentralAndEasternEurope) |>
+  group_by(Time) |>
+  summarise(total_value = sum(Value, na.rm = TRUE))
+young_pop_CentralAndEasternEurope <- young_pop_CentralAndEasternEurope |> mutate("Region"= "Central And Eastern Europe")
+```
+
+```{r}
+young_pop_EastAndSouthEastAsia <-
+  young_pop |>
+  filter(Country %in% EastAndSoutheastAsia) |>
+  group_by(Time) |>
+  summarise(total_value = sum(Value, na.rm = TRUE))
+young_pop_EastAndSouthEastAsia <- young_pop_EastAndSouthEastAsia |> mutate("Region"= "East And South East Asia")
+```
+
+```{r}
+young_pop_SouthEastAsia <-
+  young_pop |>
+  filter(Country %in% SoutheastAsia) |>
+  group_by(Time) |>
+  summarise(total_value = sum(Value, na.rm = TRUE))
+young_pop_SouthEastAsia <- young_pop_SouthEastAsia |> mutate("Region"= "South East Asia")
+```
+
+### Illiterate per region
+```{r}
+illiteracy_CentralAsia <-
+  illiteracy |>
+  filter(Country %in% CentralAsia) |>
+  group_by(Time) |>
+  summarise(total_value = sum(Value, na.rm = TRUE))
+illiteracy_CentralAsia <- illiteracy_CentralAsia |> mutate("Region"= "Central Asia")
+```
+
+```{r}
+illiteracy_NorthAfricaAndWestAsia <-
+  illiteracy |>
+  filter(Country %in% NortAfricaAndWestAsia) |>
+  group_by(Time) |>
+  summarise(total_value = sum(Value, na.rm = TRUE))
+illiteracy_NorthAfricaAndWestAsia <- illiteracy_NorthAfricaAndWestAsia |> mutate("Region"= "North Africa And West Asia")
+```
+
+```{r}
+illiteracy_SubSahara <-
+  illiteracy |>
+  filter(Country %in% SubSahara) |>
+  group_by(Time) |>
+  summarise(total_value = sum(Value, na.rm = TRUE))
+illiteracy_SubSahara <- illiteracy_SubSahara |> mutate("Region"= "SubSahara")
+```
+
+```{r}
+illiteracy_CentralAndEasternEurope <-
+  illiteracy |>
+  filter(Country %in% CentralAndEasternEurope) |>
+  group_by(Time) |>
+  summarise(total_value = sum(Value, na.rm = TRUE))
+illiteracy_CentralAndEasternEurope <- illiteracy_CentralAndEasternEurope |> mutate("Region"= "Central And Eastern Europe")
+```
+
+```{r}
+illiteracy_EastAndSouthEastAsia <-
+  illiteracy |>
+  filter(Country %in% EastAndSoutheastAsia) |>
+  group_by(Time) |>
+  summarise(total_value = sum(Value, na.rm = TRUE))
+illiteracy_EastAndSouthEastAsia <- illiteracy_EastAndSouthEastAsia |> mutate("Region"= "East And South East Asia")
+```
+
+```{r}
+illiteracy_SouthEastAsia <-
+  illiteracy |>
+  filter(Country %in% SoutheastAsia) |>
+  group_by(Time) |>
+  summarise(total_value = sum(Value, na.rm = TRUE))
+illiteracy_SouthEastAsia <- illiteracy_SouthEastAsia |> mutate("Region"= "South East Asia")
+```
+
+### Concatenation of Regions for Young Population Datasets
+```{r}
+young_pop_regions <- rbind(young_pop_CentralAsia, young_pop_NorthAfricaAndWestAsia)
+young_pop_regions <- rbind(young_pop_regions, young_pop_SubSahara)
+young_pop_regions <- rbind(young_pop_regions, young_pop_CentralAndEasternEurope)
+young_pop_regions <- rbind(young_pop_regions, young_pop_EastAndSouthEastAsia)
+young_pop_regions <- rbind(young_pop_regions, young_pop_SouthEastAsia)
+```
+
+
+### Concatenation of Regions for Illiterate Datasets
+```{r}
+illiteracy_regions <- rbind(illiteracy_CentralAsia, illiteracy_NorthAfricaAndWestAsia)
+illiteracy_regions <- rbind(illiteracy_regions, illiteracy_SubSahara)
+illiteracy_regions <- rbind(illiteracy_regions, illiteracy_CentralAndEasternEurope)
+illiteracy_regions <- rbind(illiteracy_regions, illiteracy_EastAndSouthEastAsia)
+illiteracy_regions <- rbind(illiteracy_regions, illiteracy_SouthEastAsia)
+```
+
+### Creation percentage per region
+```{r}
+illiteracy_regions <- illiteracy_regions |> rename("illiteracy"= "total_value")
+young_pop_regions <- young_pop_regions |> rename("young_pop"= "total_value")
+```
 
 ### Join of both datasets
 ```{r}
-inner_join(illiteracy_regions, young_pop_regions, by = c("Region", "Time")) |> mutate("rate"= total_value.x/total_value.y) |> ggplot(aes(x= Time, y=rate)) + geom_col() + ylab("Number of illiterate people per region") + ggtitle("Distribution of Illiteracy (rate) over time") + facet_wrap(~Region)
+inner_join(illiteracy_regions, young_pop_regions, by=c("Region", "Time")) |> mutate("illiterate_rate_regions"= 100*(illiteracy/young_pop)) |> select(Time, Region, illiterate_rate_regions) |> ggplot(aes(x= Time, y=illiterate_rate_regions)) + geom_col() + ylab("Number of illiterate people per region") + ggtitle("Distribution of Illiteracy (rate) over time") + facet_wrap(~Region)
 ```
 
-Donc c'est pas tellement un effet de taille, mais on a un problème parce que la taille de notre dernier dataset est très petit
+Donc c'est pas tellement un effet de taille, mais on a un problème parce que la taille de notre dernier dataset est très petit. 
+
 
 ### Map
 ```{r}
@@ -482,8 +638,8 @@ quantile2 <- quantile(data2$illiterate_rate, 0.7, na.rm=T)
 data2 |> select(rural_per, illiterate_rate, electricity_per, Time) |> na.omit() |> ggplot(aes(x = rural_per, y = illiterate_rate, color = electricity_per)) +  geom_point(alpha=.5) + scale_color_gradient(low = "green", high = "red") + geom_hline(yintercept = quantile1, linetype = "dashed", color = "black") + geom_hline(yintercept = quantile2, linetype = "dashed", color = "black") + labs(title = "Relation between rural, illiterate and electricity share", x = "Rural percentage", y = "Illiterate percentage")
 ```
 
-## illiteracy vs PressFreedom vs Institutions (Mosaic Plot)
 
+## illiteracy vs PressFreedom vs Institutions 
 ```{r}
 PressFreedomIndex <- PressFreedomIndex |>
   group_by(Time) |>
@@ -507,8 +663,8 @@ inner_join(illiterate_rate,PressFreedomIndex, by = c("Time", "Country")) |> inne
 ```
 
 
+## Illiteracy vs GDP per capita vs Life expectancy
 ```{r}
-library(ggmosaic)
-library(htmltools)
-
+inner_join(illiterate_rate,life_expectancy, by = c("Time", "Country")) |> inner_join(GDP_capita, by = c("Time", "Country")) |> mutate("GROUP"=as.factor(GROUP)) |> ggplot(aes(x=Value.y, y=Value.x, color = GROUP)) + geom_point(alpha=0.3, size = 10) + scale_size(range = c(.1, 24)) + theme(legend.position="bottom") + ylab("Life Expectancy") + xlab("Gdp per Capita") 
 ```
+
