--- a/Project-12.qmd
+++ b/Project-12.qmd
@@ -3,7 +3,7 @@ title: "Project-12"
 format: html
 ---
 
-```{r, message=FALSE, warning=FALSE}
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 here::i_am("DM-12.Rproj")
 library(here)
 library(vroom)
@@ -19,8 +19,9 @@ library(scatterplot3d)
 ```
 
 
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 ## Data loading 
-```{r, warning=FALSE, message=FALSE}
 educ_expenditure <- vroom(here("data", "Expenditure on education.csv"), 
                           locale=locale(decimal_mark = "."))
 GDP_capita <- vroom(here("data", "GDP per capita.csv"), 
@@ -111,25 +112,25 @@ The columns' names of the Rural population share dataset are :`r rural |> names(
 
 That is why we can apply the same function to each to the UNESCO datasets. Here we choose to eliminate Flags, Flag Codes and the indicator codes because they do not fall in our research scope. On top of that, we can see that there are two variables, Times and TIMES, that are duplicate of each other as seen in the following. So we will also removes the TIMES column.
 
-```{r}
+```{r, echo=FALSE, results='hide'}
 sum(educ_expenditure$Time == educ_expenditure$TIME) == nrow(educ_expenditure)
 ```
 
-Here, we see that this column contains the same value each time. So, we will also remove this column.
-```{r}
+We see that in the educ_expenditure dataset, the column NATMON_IND contains the same value each time. So, we will also remove this column.
+```{r, echo=FALSE, results='hide'}
 educ_expenditure |>
   distinct(NATMON_IND) |> 
   knitr::kable()
 ```
 
-We will now apply the following function to all of the UNESCO data.
-```{r}
+We will now apply a data cleaning function to all of the UNESCO data.
+```{r, echo=FALSE}
 datacleaning_unesco <- function(data){
     data |> select(-`Flag Codes`, - Flags, - TIME, -ends_with("IND"))
 }
 ```
 
-```{r}
+```{r, echo=FALSE}
 educ_expenditure <- datacleaning_unesco(educ_expenditure)
 GDP_capita <- datacleaning_unesco(GDP_capita)
 GDP <- datacleaning_unesco(GDP)
@@ -138,84 +139,93 @@ enrolment  <- datacleaning_unesco(enrolment)
 illiteracy <-datacleaning_unesco(illiteracy)
 rural <- datacleaning_unesco(rural)
 ```
-On modifie ces deux variables pour qu'elles soient à la même unité que d'autres variables avec lesquelles on va les utiliser.
-```{r}
+
+We change the units of the young pop dataset and the GDP dataset to millions in order for them to match the other variables. 
+```{r, echo=FALSE}
 young_pop <- young_pop |> mutate("Value"= Value * 10^3, "Indicator"= "Population aged 15-24 years (number)")
 GDP <- GDP |> mutate("Value"= Value / 10^6, "Indicator"= "GDP, US$ (millions)")
 ```
 
-We now are doing the data cleaning of the electricity variable. 
-```{r}
+
+```{r, echo=FALSE, results='hide'}
+#We now are doing the data cleaning of the electricity variable. 
+
 electricity |> 
   names()|>
   head(n=10) |>
   knitr::kable()
 ```
 
-Here, we want to see what values these columns take. 
-```{r}
+
+```{r, echo=FALSE, results='hide'}
+# Here, we want to see what values these columns take. 
+
 electricity |> 
   distinct(`Series Code`, `Series Name`) |> 
   knitr::kable()
 ```
 
-Because access to electricity is our variable of interest, we filter the dataset.
-```{r}
+
+```{r, echo=FALSE}
+# Because access to electricity is our variable of interest, we filter the dataset.
+
 electricity <- electricity |>
   filter(`Series Name`== "Access to electricity (% of population)")|> 
   select(- `Series Code`)
 ```
 
-We now are going to rename the columns for them to match the other variables from the UNESCO.
-```{r}
+We now are going to rename the columns of each datasets for them to match the variables from the UNESCO.
+```{r, echo=FALSE}
 electricity <- electricity |> 
   rename("Country" = "Country Name", "LOCATION"= "Country Code", "Indicator"="Series Name")
 ```
 
 We do pivot_longer in order to have all of our datasets in the same format.
-```{r}
+```{r, echo=FALSE}
 electricity <- electricity |> 
   pivot_longer(!(Indicator| Country| LOCATION)) |> 
   rename("Time"= "name", "Value"= "value") |> 
   mutate("Time"= as.numeric(substr(Time, 1, 4)))
 ```
 
-We now are cleaning the PressFreedom variable.
-```{r}
+
+```{r, echo=FALSE, results='hide'}
+# We now are cleaning the PressFreedom variable.
+
 PressFreedom |> 
   names() |>
   head(n=10) |>
   knitr::kable()
 ```
 
-```{r}
+```{r, echo=FALSE, results='hide'}
 PressFreedom |> 
   distinct(`Subindicator Type`, `Indicator ID`) |>
   knitr::kable()
 ```
 
-```{r}
+```{r, echo=FALSE}
 PressFreedom <- PressFreedom |> 
   select(- `Indicator ID`, - `Subindicator Type`)
 ```
 
-```{r}
+```{r, echo=FALSE}
 PressFreedom <- PressFreedom |> rename("Country" = "Country Name", "LOCATION"= "Country ISO3")
 ```
 
-```{r}
+```{r, echo=FALSE, results='hide'}
 PressFreedom |> 
   count(Indicator) |> 
   knitr::kable()
 ```
 
 Because our PressFreedom table contains two indicators we split the table in order to have two tables representing each indicator. 
-```{r}
+```{r, echo=FALSE}
 PressFreedomIndex <- PressFreedom |> filter(Indicator == "Press Freedom Index")
 PressFreedomRank <- PressFreedom |> filter(Indicator == "Press Freedom Rank")
 ```
 
-```{r}
+```{r, echo=FALSE}
 PressFreedomIndex <- PressFreedomIndex |> 
   pivot_longer(!(Indicator | Country | LOCATION)) |>
   rename("Time" = "name", "Press Freedom Index" = "value") |> filter(`Press Freedom Index` >= 0 & `Press Freedom Index` <= 100) |>
@@ -227,7 +237,7 @@ Since our analysis is not at the individual level, we are going to only select "
 
 
 To finish, we now are cleaning the Institution variable, which only consists of renaming its columns. 
-```{r}
+```{r, echo=FALSE}
 institution <- institution |> rename("Country" = "Entity", "LOCATION"= "Code", "Value"= "stability_dem_inst_bti", "Time"= "Year")|> mutate("Indicator"= "Stability of Institutions")
 ```
 
@@ -237,7 +247,7 @@ The government expenditure on education is expressed in millions US$.
 
 This table has `r educ_expenditure |> ncol()` columns, which are `r educ_expenditure |> names()`.
 It has `r educ_expenditure |> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the Expenditure on education variable.
-```{r}
+```{r, echo=FALSE}
 educ_expenditure |> 
   filter(Country != "Holy See") |> 
   group_by(Country) |> 
@@ -251,7 +261,7 @@ educ_expenditure |>
 The GDP and GDP per capita are expressed in terms of current US$. 
 
 This GDP table has `r GDP |> ncol()` columns, which are `r GDP |> names()`. It has `r GDP |> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the GDP variable.  
-```{r}
+```{r, echo=FALSE}
 GDP |> 
   group_by(Country) |> 
   summarise("min" = min(Value, na.rm=TRUE), "median" = median(Value, na.rm=TRUE), "max"= max(Value, na.rm=TRUE), "mean"= mean(Value, na.rm=TRUE)) |> 
@@ -260,7 +270,7 @@ GDP |>
 ```
 
 This GDP per capita  table has `r GDP_capita |> ncol()` columns, which are `r GDP_capita |> names()`. It has `r GDP_capita |> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the GDP per capita variable. 
-```{r}
+```{r, echo=FALSE}
 GDP_capita |> 
   group_by(Country) |> 
   summarise("min" = min(Value, na.rm=TRUE), "median" = median(Value, na.rm=TRUE), "max"= max(Value, na.rm=TRUE), "mean"= round(mean(Value, na.rm=TRUE), 2)) |> 
@@ -273,7 +283,7 @@ GDP_capita |>
 Life expectancy at birth is expressed in total years.
 
 This Life expectancy at birth table has `r life_expectancy|> ncol()` columns, which are `r life_expectancy |> names()`. It has `r life_expectancy|> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the Life expectancy at birth variable.  
-```{r}
+```{r, echo=FALSE}
 life_expectancy |> 
   group_by(Country) |> 
   summarise("min" = min(Value, na.rm=TRUE), "median" = median(Value, na.rm=TRUE), "max"= max(Value, na.rm=TRUE), "mean"= round(mean(Value, na.rm=TRUE),2)) |> 
@@ -284,7 +294,7 @@ life_expectancy |>
 The young population is expressed in number.
 
 This total young population table has `r young_pop |> ncol()` columns, which are `r young_pop |> names()`. It has `r young_pop|> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the total population variable. 
-```{r}
+```{r, echo=FALSE, warning=FALSE}
 young_pop |> 
   filter(Country != "Falkland Islands (Malvinas)") |> 
   group_by(Country) |> 
@@ -296,7 +306,7 @@ young_pop |>
 The total net enrolment rate (in upper secondary, lower secondary and primary) of both sexes is expressed in percentage. 
 
 This  total net enrolment rate table has `r enrolment |> ncol()` columns, which are `r enrolment |> names()`. It has `r enrolment |> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the total net enrolment rate at birth variable.  
-```{r}
+```{r, echo=FALSE}
 enrolment |> 
   filter(Country != "Holy See") |> 
   group_by(Country) |> 
@@ -308,7 +318,7 @@ enrolment |>
 The Rural population is expressed as a percentage of the total population.
 
 This Rural population table has `r rural |> ncol()` columns, which are `r rural |> names()`. It has `r rural |> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the Rural population variable.
-```{r, warning= FALSE}
+```{r, echo=FALSE, warning= FALSE}
 rural |> 
   group_by(Country) |> 
   summarise("min" = min(Value, na.rm=TRUE), "median" = median(Value, na.rm=TRUE), "max"= max(Value, na.rm=TRUE), "mean"= round(mean(Value, na.rm=TRUE),2)) |> 
@@ -319,7 +329,7 @@ rural |>
 The access to electricity is measured as a percentage of the population.
 
 This access to electricity table has `r electricity |> ncol()` columns, which are `r electricity |> names()`. It has `r electricity |> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the access to electricity variable.  
-```{r}
+```{r, echo=FALSE}
 electricity |> 
   group_by(Country) |> 
   filter(!(Country %in% c("Kosovo", "American Samoa", "Not classified"))) |>
@@ -331,7 +341,7 @@ electricity |>
 The press freedom table shows for each country their rank and index. The index used ranges from 0 to 100 with 100 being a country with the best press freedom. This Index has been created by the Reporters Without Borders(RSF).
 
 This  press freedom index table has `r PressFreedomIndex |> ncol()` columns, which are `r PressFreedomIndex |> names()`. It has `r PressFreedomIndex |> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the  press freedom variable.  
-```{r}
+```{r, echo=FALSE}
 PressFreedomIndex |> group_by(Country) |> 
   summarise("min" = round(min(`Press Freedom Index`, na.rm=TRUE), 2), "median" = round(median(`Press Freedom Index`, na.rm=TRUE), 2), "max"= round(max(`Press Freedom Index`, na.rm=TRUE), 2),  "mean"= round(mean(`Press Freedom Index`, na.rm=TRUE),2)) |> 
   head(n=10) |> 
@@ -343,7 +353,7 @@ PressFreedomIndex |> group_by(Country) |>
 The stability of institutions of each country is represented with the Bertelsmann Transformation Index (BTI). It ranges from 0 to 10 with 10 representing the most stable countries. This index is published by the Bertelsmann Stiftung, a German private foundation.
 
 This stability of institutions table has `r institution |> ncol()` columns, which are `r institution |> names()`. It has `r institution|> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the stability of institutions variable. 
-```{r}
+```{r, echo=FALSE}
 institution |> group_by(Country) |> 
   summarise("min" = round(min(Value, na.rm=TRUE),2), "median" = round(median(Value, na.rm=TRUE),2), "max"= round(max(Value, na.rm=TRUE), 2), "mean"= round(mean(Value, na.rm=TRUE),2)) |> 
   head(n=10) |> 
@@ -369,15 +379,19 @@ At the end of our work, we anticipate two possible outcomes. First, no obvious t
 
 First, we want to have a look at the distribution over time of Illiterate demographic (15-24 years old) around the world.
 
-```{r}
+```{r, echo=FALSE}
 illiteracy |> filter(Country=="World") |> ggplot(aes(x= Time, y=Value/10^3)) + geom_line() + ylab("Number of illiterates (in thousands)") + ggtitle("Evolution of Illiteracy over the years")
 ```
 
-```{r}
+## Size effect ?
+```{r, echo=FALSE}
 illiteracy |> filter(Country %in%  c("Sub-Saharan Africa", "Central and Eastern Europe", "South-Eastern Asia", "Central Asia", "Northern Africa and Western Asia", "Eastern and South-Eastern Asia", "Oceania (excluding Australia and New Zealand")) |> ggplot(aes(x= Time, y=Value/10^3)) + geom_col() + ylab("Number of illiterate people (in thousands)") + ggtitle("Evolution of Illiteracy over time per region") + facet_wrap(~Country)
 ```
+
+
+```{r, echo=FALSE}
 ### Creation of Regions
-```{r}
+
 CentralAsia <- c("Armenia", "Azerbaijan", "Georgia", "Kazakhstan", "Kyrgyzstan", "Mongolia", "Tajikistan", "Turkmenistan", "Uzbekistan")
 
 
@@ -399,53 +413,50 @@ SoutheastAsia <- c("Brunei", "Cambodia", "Indonesia", "Laos", "Malaysia", "Myanm
 ```
 
 
+
+```{r, echo=FALSE}
 ### Young Pop regions
-```{r}
+
 young_pop_CentralAsia <-
   young_pop |>
   filter(Country %in% CentralAsia) |>
   group_by(Time) |>
   summarise(total_value = sum(Value, na.rm = TRUE))
 young_pop_CentralAsia <- young_pop_CentralAsia |> mutate("Region"= "Central Asia")
-```
 
-```{r}
+
 young_pop_NorthAfricaAndWestAsia <-
   young_pop |>
   filter(Country %in% NortAfricaAndWestAsia) |>
   group_by(Time) |>
   summarise(total_value = sum(Value, na.rm = TRUE))
 young_pop_NorthAfricaAndWestAsia <-young_pop_NorthAfricaAndWestAsia |> mutate("Region"= "North Africa And West Asia")
-```
 
-```{r}
+
 young_pop_SubSahara <-
   young_pop |>
   filter(Country %in% SubSahara) |>
   group_by(Time) |>
   summarise(total_value = sum(Value, na.rm = TRUE))
 young_pop_SubSahara <- young_pop_SubSahara |> mutate("Region"="SubSahara")
-```
 
-```{r}
+
 young_pop_CentralAndEasternEurope <-
   young_pop |>
   filter(Country %in% CentralAndEasternEurope) |>
   group_by(Time) |>
   summarise(total_value = sum(Value, na.rm = TRUE))
 young_pop_CentralAndEasternEurope <- young_pop_CentralAndEasternEurope |> mutate("Region"= "Central And Eastern Europe")
-```
 
-```{r}
+
 young_pop_EastAndSouthEastAsia <-
   young_pop |>
   filter(Country %in% EastAndSoutheastAsia) |>
   group_by(Time) |>
   summarise(total_value = sum(Value, na.rm = TRUE))
 young_pop_EastAndSouthEastAsia <- young_pop_EastAndSouthEastAsia |> mutate("Region"= "East And South East Asia")
-```
 
-```{r}
+
 young_pop_SouthEastAsia <-
   young_pop |>
   filter(Country %in% SoutheastAsia) |>
@@ -454,53 +465,49 @@ young_pop_SouthEastAsia <-
 young_pop_SouthEastAsia <- young_pop_SouthEastAsia |> mutate("Region"= "South East Asia")
 ```
 
+
+```{r, echo=FALSE}
 ### Illiterate per region
-```{r}
+
 illiteracy_CentralAsia <-
   illiteracy |>
   filter(Country %in% CentralAsia) |>
   group_by(Time) |>
   summarise(total_value = sum(Value, na.rm = TRUE))
 illiteracy_CentralAsia <- illiteracy_CentralAsia |> mutate("Region"= "Central Asia")
-```
 
-```{r}
+
 illiteracy_NorthAfricaAndWestAsia <-
   illiteracy |>
   filter(Country %in% NortAfricaAndWestAsia) |>
   group_by(Time) |>
   summarise(total_value = sum(Value, na.rm = TRUE))
 illiteracy_NorthAfricaAndWestAsia <- illiteracy_NorthAfricaAndWestAsia |> mutate("Region"= "North Africa And West Asia")
-```
 
-```{r}
+
 illiteracy_SubSahara <-
   illiteracy |>
   filter(Country %in% SubSahara) |>
   group_by(Time) |>
   summarise(total_value = sum(Value, na.rm = TRUE))
 illiteracy_SubSahara <- illiteracy_SubSahara |> mutate("Region"= "SubSahara")
-```
 
-```{r}
+
 illiteracy_CentralAndEasternEurope <-
   illiteracy |>
   filter(Country %in% CentralAndEasternEurope) |>
   group_by(Time) |>
   summarise(total_value = sum(Value, na.rm = TRUE))
 illiteracy_CentralAndEasternEurope <- illiteracy_CentralAndEasternEurope |> mutate("Region"= "Central And Eastern Europe")
-```
 
-```{r}
+
 illiteracy_EastAndSouthEastAsia <-
   illiteracy |>
   filter(Country %in% EastAndSoutheastAsia) |>
   group_by(Time) |>
   summarise(total_value = sum(Value, na.rm = TRUE))
 illiteracy_EastAndSouthEastAsia <- illiteracy_EastAndSouthEastAsia |> mutate("Region"= "East And South East Asia")
-```
 
-```{r}
 illiteracy_SouthEastAsia <-
   illiteracy |>
   filter(Country %in% SoutheastAsia) |>
@@ -509,18 +516,17 @@ illiteracy_SouthEastAsia <-
 illiteracy_SouthEastAsia <- illiteracy_SouthEastAsia |> mutate("Region"= "South East Asia")
 ```
 
+
+```{r, echo=FALSE}
 ### Concatenation of Regions for Young Population Datasets
-```{r}
 young_pop_regions <- rbind(young_pop_CentralAsia, young_pop_NorthAfricaAndWestAsia)
 young_pop_regions <- rbind(young_pop_regions, young_pop_SubSahara)
 young_pop_regions <- rbind(young_pop_regions, young_pop_CentralAndEasternEurope)
 young_pop_regions <- rbind(young_pop_regions, young_pop_EastAndSouthEastAsia)
 young_pop_regions <- rbind(young_pop_regions, young_pop_SouthEastAsia)
-```
 
 
 ### Concatenation of Regions for Illiterate Datasets
-```{r}
 illiteracy_regions <- rbind(illiteracy_CentralAsia, illiteracy_NorthAfricaAndWestAsia)
 illiteracy_regions <- rbind(illiteracy_regions, illiteracy_SubSahara)
 illiteracy_regions <- rbind(illiteracy_regions, illiteracy_CentralAndEasternEurope)
@@ -528,29 +534,35 @@ illiteracy_regions <- rbind(illiteracy_regions, illiteracy_EastAndSouthEastAsia)
 illiteracy_regions <- rbind(illiteracy_regions, illiteracy_SouthEastAsia)
 ```
 
+
+```{r, echo=FALSE}
 ### Creation percentage per region
-```{r}
+
 illiteracy_regions <- illiteracy_regions |> rename("illiteracy"= "total_value")
 young_pop_regions <- young_pop_regions |> rename("young_pop"= "total_value")
 ```
 
+
+```{r, echo=FALSE}
 ### Join of both datasets
-```{r}
+
 inner_join(illiteracy_regions, young_pop_regions, by=c("Region", "Time")) |> mutate("illiterate_rate_regions"= 100*(illiteracy/young_pop)) |> select(Time, Region, illiterate_rate_regions) |> ggplot(aes(x= Time, y=illiterate_rate_regions)) + geom_col() + ylab("Illiteracy rate") + ggtitle("Evolution of Illiteracy over time") + facet_wrap(~Region)
 ```
 
 Donc c'est pas tellement un effet de taille, mais on a un problème parce que la taille de notre dernier dataset est très petit. 
 
+
+
+```{r, echo=FALSE}
 ## Creation illiterate rate 
 
-```{r}
 illiterate_rate <- inner_join(illiteracy, young_pop, by = c("Country", "Time")) |> rename("YoungPop"= "Value.y", "Illiterate"="Value.x")
 illiterate_rate <- illiterate_rate |> mutate("illiterate_rate"= (Illiterate/YoungPop)*100) |> filter(!is.na(illiterate_rate))
 ```
 
 
-### Map
-```{r}
+## Map
+```{r, echo=FALSE}
 world_map <- map_data("world")
 world_map = map_data("world") |> filter(! long > 180)
 
@@ -581,8 +593,10 @@ ggplot() +
 
 
 
+
+```{r, echo=FALSE}
 ## Creation groupe
-```{r}
+
 illiterate_rate <- illiterate_rate |> group_by(Time) |> 
   mutate(GROUP = case_when(
       illiterate_rate <= quantile(illiterate_rate, 0.3, na.rm = TRUE) ~ 1,
@@ -591,18 +605,18 @@ illiterate_rate <- illiterate_rate |> group_by(Time) |>
       TRUE ~ NA ))
 ```
 
-### Graphical Representation
-```{r}
+## Graphical Representation (we need to add group 2 to match the other representation)
+```{r, echo=FALSE}
 expenditure_rate <- inner_join(educ_expenditure, GDP, by = c("Country", "Time")) |> mutate("exp_rate"= Value.x/Value.y) |> select(Country, Time, -Indicator.x, exp_rate)
 young_pop <- young_pop |> rename("Population"= "Value")
 ```
 
-```{r}
+```{r, echo=FALSE}
 inner_join(illiterate_rate, expenditure_rate, by = c("Country", "Time")) |> inner_join(young_pop, by = c("Country", "Time")) |> filter(GROUP != 2) |> ggplot(aes(fill=as.factor(GROUP), y=exp_rate, x=as.factor(Time))) + geom_boxplot(position="dodge", alpha=0.5) + coord_flip()+ guides(fill = guide_legend(title = "Group")) + labs(title = "Boxplot of Expenditure on Education Rate Over Time per group",x = "Time", y = "Expenditure on Education Rate") 
 ```
 
-
-```{r}
+## Regression 
+```{r, echo=FALSE}
 enrol_exp <- inner_join(enrolment, expenditure_rate, by=c("Country", "Time")) |> mutate("Value"= Value/100) |> rename("enrolment"= "Value")
 
 lm(enrolment ~ exp_rate + as.factor(Time), data = enrol_exp) |> summary() 
@@ -611,17 +625,17 @@ lm(enrolment ~ exp_rate + as.factor(Time), data = enrol_exp) |> summary()
 
 
 ## Illiteracy vs enrolement 
-```{r}
+```{r, echo=FALSE}
 inner_join(illiterate_rate, enrolment, by=c("Country", "Time")) |> filter(Time!=2021, !is.na(GROUP)) |> ggplot(aes(x = Value, y = illiterate_rate, label = Country)) + geom_point(alpha = .3) + facet_wrap(~GROUP) + xlab("enrolment percentage") + ylab("illiterate percentage") + ggtitle("impact of enrolment on illiteracy per group")
 ```
 
-## illiteracy vs electricity vs rural
-```{r}
+## illiteracy vs electricity vs rural (we need to specify that the bars means groups)
+```{r, echo=FALSE}
 rural <- rural |> rename("rural_per"="Value")
 electricity <- electricity |> rename("electricity_per"="Value")
 GDP_capita <- GDP_capita |> rename("GDP per capita"="Value")
-```
-```{r}
+
+
 data2 <- inner_join(illiterate_rate, electricity, by = c("Time", "Country")) |>  inner_join(rural, by = c("Time", "Country")) 
 
 quantile1 <- quantile(data2$illiterate_rate, 0.3, na.rm=T)
@@ -631,8 +645,8 @@ data2 |> select(rural_per, illiterate_rate, electricity_per, Time) |> na.omit() 
 ```
 
 
-## illiteracy vs PressFreedom vs Institutions 
-```{r}
+## illiteracy vs PressFreedom vs Institutions (add legend to specify that color = Group_press so we can remove that y-axis + rename the axis)
+```{r, echo=FALSE}
 PressFreedomIndex <- PressFreedomIndex |>
   group_by(Time) |>
   mutate(GROUP_press = case_when(
@@ -657,7 +671,7 @@ vcd::mosaic(GROUP_press ~ GROUP + GROUP_inst, data = data3, direction = c("v", "
 
 
 ## Illiteracy vs GDP per capita vs Life expectancy
-```{r}
+```{r, echo=FALSE}
 inner_join(illiterate_rate,life_expectancy, by = c("Time", "Country")) |> inner_join(GDP_capita, by = c("Time", "Country")) |> mutate("GROUP"=as.factor(GROUP)) |> ggplot(aes(x=`GDP per capita`, y= Value, color = GROUP)) + geom_point(alpha=0.3, size = 10) + scale_size(range = c(.1, 24)) + theme(legend.position="bottom") + ylab("Life Expectancy") + xlab("Gdp per Capita") 
 ```
 
